# IK

./: CMakeLists.txt  game.cpp  game.h  game_types.h  main.cpp
glew/src/: glew.c
renderer/: renderer.cpp  renderer.h  scenedata.h
renderer/objects/: cone.h  cylinder.h  trimesh.h
